Fixed padding on matchup table, fixed text align on fap leaders

--- a/src/css/matchup-styles.css
+++ b/src/css/matchup-styles.css
@@ -91,7 +91,7 @@ h5 {
 
 
 .matchup-page th:nth-child(7), td:nth-child(7) {
-  padding-left: 0;
+  padding-left: 10px;
 }
 
 .matchup-page td:nth-child(3) {
@@ -100,6 +100,10 @@ h5 {
 
 .matchup-page td:nth-child(6), td:nth-child(7), tr:nth-child(6), tr:nth-child(7) {
   text-align: right !important;
-  padding-right: 0 !important;
+  padding-right: 10px !important;
   border-right: none !important;
+}
+
+.fap-stats td:nth-child(1) {
+  text-align: left !important;
 }
